--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shadowcms",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Open source CMS built in nodejs",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/xShadowCodingx/shadowcms#readme",
   "dependencies": {
-    "express": "^4.21.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "pug": "^3.0.3"
   }
 }
