Added initial user/admin creation when first set up, still have work to do on hashing and verification

--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   },
   "homepage": "https://github.com/xShadowCodingx/shadowcms#readme",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   }
 }
