Added session authentication and middleware functionality with express-session

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 MODE = development # development or production
 DATABASE_USERNAME = root
 DATABASE_PASSWORD = password
+SESSION_SIGNATURE_SECRET_KEY = thesecretkey
+SESSION_TIMEOUT_MS = 900000
