--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
   "homepage": "https://github.com/xShadowCodingx/shadowcms#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^11.3.0",
+    "better-sqlite3-session-store": "^0.1.0",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
