--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.18.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^10.0.0"
   }
 }
